added extent report to testng test

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalValidationUsingExcelTest" class="method navigator-link" hash-for-method="testCapital(Albania, Tirana)">testCapital(Albania, Tirana)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalCityTestNGTest" class="method navigator-link" hash-for-method="verifyCapitalCity(Afghanistan, Kabul)">verifyCapitalCity(Afghanistan, Kabul)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalValidationUsingExcelTest" class="method navigator-link" hash-for-method="testCapital(Afghanistan, Kabul)">testCapital(Afghanistan, Kabul)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalCityTestNGTest" class="method navigator-link" hash-for-method="verifyCapitalCity(Australia, Canberra)">verifyCapitalCity(Australia, Canberra)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalValidationUsingExcelTest" class="method navigator-link" hash-for-method="testCapital(Australia, Canberra)">testCapital(Australia, Canberra)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalCityTestNGTest" class="method navigator-link" hash-for-method="verifyCapitalCity(Albania, Tirana)">verifyCapitalCity(Albania, Tirana)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalCityTestNGTest" class="method navigator-link" hash-for-method="verifyCapitalCity(Argentina, Buenos Aires)">verifyCapitalCity(Argentina, Buenos Aires)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="tests.CapitalCityTestNGTest" class="method navigator-link" hash-for-method="verifyCapitalCity(Algeria, Algiers)">verifyCapitalCity(Algeria, Algiers)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,31 +141,47 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.CapitalValidationUsingExcelTest</span>
+              <span class="class-name">tests.CapitalCityTestNGTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testCapital(Albania, Tirana)">
-                  </a> <!-- testCapital(Albania, Tirana) -->
-                  <span class="method-name">testCapital</span>
-                  <span class="parameters">(Albania,Tirana)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testCapital(Afghanistan, Kabul)">
-                  </a> <!-- testCapital(Afghanistan, Kabul) -->
-                  <span class="method-name">testCapital</span>
+                  <a name="verifyCapitalCity(Afghanistan, Kabul)">
+                  </a> <!-- verifyCapitalCity(Afghanistan, Kabul) -->
+                  <span class="method-name">verifyCapitalCity</span>
                   <span class="parameters">(Afghanistan,Kabul)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testCapital(Australia, Canberra)">
-                  </a> <!-- testCapital(Australia, Canberra) -->
-                  <span class="method-name">testCapital</span>
+                  <a name="verifyCapitalCity(Australia, Canberra)">
+                  </a> <!-- verifyCapitalCity(Australia, Canberra) -->
+                  <span class="method-name">verifyCapitalCity</span>
                   <span class="parameters">(Australia,Canberra)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyCapitalCity(Albania, Tirana)">
+                  </a> <!-- verifyCapitalCity(Albania, Tirana) -->
+                  <span class="method-name">verifyCapitalCity</span>
+                  <span class="parameters">(Albania,Tirana)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyCapitalCity(Argentina, Buenos Aires)">
+                  </a> <!-- verifyCapitalCity(Argentina, Buenos Aires) -->
+                  <span class="method-name">verifyCapitalCity</span>
+                  <span class="parameters">(Argentina,Buenos Aires)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyCapitalCity(Algeria, Algiers)">
+                  </a> <!-- verifyCapitalCity(Algeria, Algiers) -->
+                  <span class="method-name">verifyCapitalCity</span>
+                  <span class="parameters">(Algeria,Algiers)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +189,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/d0/yqgyrtq15g31vvbpx2ym3z9c0000gn/T/testng-eclipse-969096776/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/d0/yqgyrtq15g31vvbpx2ym3z9c0000gn/T/testng-eclipse-1487105895/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +198,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.CapitalValidationUsingExcelTest&quot;/&gt;
+      &lt;class name=&quot;tests.CapitalCityTestNGTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;verifyCapitalCity&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- tests.CapitalCityTestNGTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,24 +242,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testCapital')
-data.setCell(0, 2, 'tests.CapitalValidationUsingExcelTest')
-data.setCell(0, 3, 13);
+data.setCell(0, 1, 'verifyCapitalCity')
+data.setCell(0, 2, 'tests.CapitalCityTestNGTest')
+data.setCell(0, 3, 26);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testCapital')
-data.setCell(1, 2, 'tests.CapitalValidationUsingExcelTest')
-data.setCell(1, 3, 8);
+data.setCell(1, 1, 'verifyCapitalCity')
+data.setCell(1, 2, 'tests.CapitalCityTestNGTest')
+data.setCell(1, 3, 9);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testCapital')
-data.setCell(2, 2, 'tests.CapitalValidationUsingExcelTest')
-data.setCell(2, 3, 8);
+data.setCell(2, 1, 'verifyCapitalCity')
+data.setCell(2, 2, 'tests.CapitalCityTestNGTest')
+data.setCell(2, 3, 9);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyCapitalCity')
+data.setCell(3, 2, 'tests.CapitalCityTestNGTest')
+data.setCell(3, 3, 8);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifyCapitalCity')
+data.setCell(4, 2, 'tests.CapitalCityTestNGTest')
+data.setCell(4, 3, 7);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 29 ms</span>
+              <span class="suite-total-time">Total running time: 59 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -255,27 +293,43 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.CapitalValidationUsingExcelTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.CapitalCityTestNGTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setupExtent</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setup</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">50 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">testCapital(Afghanistan, Kabul)</span>
-                <span class="method-start">1638 ms</span>
+                <span class="method-name">verifyCapitalCity(Afghanistan, Kabul)</span>
+                <span class="method-start">2023 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testCapital(Albania, Tirana)</span>
-                <span class="method-start">1652 ms</span>
+                <span class="method-name">verifyCapitalCity(Albania, Tirana)</span>
+                <span class="method-start">2050 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testCapital(Australia, Canberra)</span>
-                <span class="method-start">1660 ms</span>
+                <span class="method-name">verifyCapitalCity(Algeria, Algiers)</span>
+                <span class="method-start">2060 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyCapitalCity(Argentina, Buenos Aires)</span>
+                <span class="method-start">2069 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">verifyCapitalCity(Australia, Canberra)</span>
+                <span class="method-start">2077 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">1668 ms</span>
+                <span class="method-start">2086 ms</span>
               </div> <!-- configuration-class after -->
+              <div class="configuration-suite after">
+                <span class="method-name">flushReports</span>
+                <span class="method-start">2174 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
